# instrument-components

./: .gitignore  LICENSE  README.md  calibration.py  environment.yml  load_BIFROST_readouts.ipynb  make_BIFROST_mcstas_parameters.ipynb  make_BIFROST_off.ipynb  make_BIFROST_rtp_parameters.ipynb  make_BIFROST_step_file.ipynb  pyproject.toml
components/: crystals.py  detectors.py  secondary.py  serialize.py
src/nicess/: __init__.py  bifrost.py  cgen.py  crystals.py  decorators.py  detectors.py  guide.py  mcstas_scan_data.py  mcstasscript.py  readouts.py  rowland.py  secondary.py  serialize.py  spatial.py  utilities.py
src/nicess/bifrost/: __init__.py  analyzer.py  arm.py  bifrost.py  channel.py  parameters.py  tank.py  triplet.py
src/nicess/cspec/: __init__.py  guide.py  pack.py  parameters.py  tank.py
tests/: test_bifrost.py  test_crystals.py  test_detectors.py  test_direct_secondary.py
